--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.218",
+    "@iconify/tailwind": "^1.1.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
