--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
+    "semver": "^7.6.3",
     "swr": "^1.3.0"
   },
   "devDependencies": {
